--- a/public/style.css
+++ b/public/style.css
@@ -319,6 +319,12 @@ textarea.neon-input {
     .header-content {
         padding: 0 10px;
     }
+
+    .flip {
+        display: inline-block;
+        transform: rotate(180deg) translateY(-0.06em);;
+        margin-left: 0.6em;
+    }
 }
 
 /* Buttons auf dem Handy größer machen */
@@ -361,4 +367,5 @@ textarea.neon-input {
   transform: rotate(180deg) translateY(-0.055em);;
   margin-left: -1.2em;
 }
+
 
